Basic dashboard setup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,7 @@
   <mat-label>Favorite food</mat-label>
   <input
     matInput
-    placeholder="Ex. Pizza"
-    value="Sushi"
+    placeholder="Start typing city name"
     [formControl]="cityNameValue"
   />
 </mat-form-field>
