--- a/src/app/dashboard/components/city-weather-card/city-weather-card.component.html
+++ b/src/app/dashboard/components/city-weather-card/city-weather-card.component.html
@@ -1,7 +1,9 @@
-<mat-card class="city-weather-card">
+<mat-card class="city-weather-card" ripple routerLink="/weather-details/{{ city.id }}">
   <div class="city-weather-card__title">
     <h1>{{ city.name }}</h1>
-    <button mat-button color="primary" (click)="removeFromFav()"><mat-icon>delete</mat-icon></button>
+    <button mat-button color="primary" (click)="removeFromFav()">
+      <mat-icon>delete</mat-icon>
+    </button>
   </div>
   <div class="city-weather-card__field">
     <p class="city-weather-card__label">Temperature</p>
