--- a/src/app/search/page/search-city.page.html
+++ b/src/app/search/page/search-city.page.html
@@ -1,5 +1,5 @@
 <mat-form-field>
-  <mat-label>Favorite food</mat-label>
+  <mat-label>Cities</mat-label>
   <input
     matInput
     placeholder="Start typing city name"
